--- a/css/custom.css
+++ b/css/custom.css
@@ -44,7 +44,7 @@ img.wp-image-16 {
 
     .feature-slider {
         background-size: cover;
-        background-position: initial !important;
+        background-position: bottom !important;
     }
 
 
