--- a/css/custom.css
+++ b/css/custom.css
@@ -81,3 +81,10 @@ a.more.btn.btn--black {
     border: solid 1px;
 }
 
+
+
+/*HIDE TOP BAR*/
+
+.et_pb_row.et_pb_row_0_tb_header {
+    display: none;
+}
