--- a/css/custom.css
+++ b/css/custom.css
@@ -88,3 +88,8 @@ a.more.btn.btn--black {
 .et_pb_row.et_pb_row_0_tb_header {
     display: none;
 }
+
+
+.et_pb_row.et_pb_row_4_tb_header {
+    background-color: white;
+}
