--- a/css/custom.css
+++ b/css/custom.css
@@ -49,6 +49,7 @@ img.wp-image-16 {
     .feature-slider {
         background-size: cover;
         background-position: bottom !important;
+        min-height: 190px !important;
     }
 
 
