--- a/css/css/custom.css
+++ b/css/css/custom.css
@@ -85,5 +85,5 @@ a.more.btn.btn--black {
 
 
 .has-text-align-center.has-medium-font-size {
-    text-align: justify !important;
+    text-align: left !important;
 }
