--- a/css/css/custom.css
+++ b/css/css/custom.css
@@ -83,7 +83,7 @@ a.more.btn.btn--black {
 }
 }
 
-
-.has-text-align-center.has-medium-font-size {
+ 
+.custom-intro-text {
     text-align: left !important;
 }
