--- a/css/custom.css
+++ b/css/custom.css
@@ -98,3 +98,8 @@ a.more.btn.btn--black {
 .custom-intro-text {
     text-align: left !important;
 }
+
+.et_pb_text_3 h2 {
+    font-size: 80px;
+    line-height: 80.77px;
+}
