--- a/css/custom.css
+++ b/css/custom.css
@@ -96,7 +96,7 @@ a.more.btn.btn--black {
 }
 
 .custom-intro-text {
-    text-align: left !important;
+    text-align: justify !important;
 }
 
 .et_pb_text_3 h2 {
