--- a/css/custom.css
+++ b/css/custom.css
@@ -39,9 +39,9 @@ img.wp-image-16 {
 
 
 
-.feature-slider {
+/*.feature-slider {
     background-position: top !important;
-}
+}*/
 
 
 @media only screen and (max-width: 620px) {
