--- a/css/custom.css
+++ b/css/custom.css
@@ -95,9 +95,7 @@ a.more.btn.btn--black {
     background-color: white;
 }
 
-.custom-intro-text {
-    text-align: justify !important;
-}
+
 
 .et_pb_text_3 h2 {
     font-size: 80px;
@@ -111,4 +109,12 @@ a.more.btn.btn--black {
 p.custom-intro-text {
     font-size: 25px;
     line-height: 25px;
+}
+
+h1 {
+    text-align: center !important;
+}
+
+p.custom-intro-text {
+    text-align: center !important;
 }
