--- a/css/custom.css
+++ b/css/custom.css
@@ -119,6 +119,8 @@ p.custom-intro-text {
     text-align: center !important;
 }
 
-.custom-vuela-alto{
+
+
+.et_pb_module.et_pb_text.et_pb_text_3.et_pb_text_align_left.et_pb_bg_layout_light.custom-vuela-alto {
     margin-bottom: 0 !important;
 }
