--- a/css/custom.css
+++ b/css/custom.css
@@ -124,3 +124,7 @@ p.custom-intro-text {
 .et_pb_module.et_pb_text.et_pb_text_3.et_pb_text_align_left.et_pb_bg_layout_light.custom-vuela-alto {
     margin-bottom: 0 !important;
 }
+
+h2.custom-h2-text {
+    color: white !important;
+}
