--- a/css/custom.css
+++ b/css/custom.css
@@ -111,14 +111,14 @@ p.custom-intro-text {
     line-height: 25px;
 }
 
-h1 {
+/*h1 {
     text-align: center !important;
 }
 
 p.custom-intro-text {
     text-align: center !important;
 }
-
+*/
 
 
 .et_pb_module.et_pb_text.et_pb_text_3.et_pb_text_align_left.et_pb_bg_layout_light.custom-vuela-alto {
