--- a/css/css/divi-child/style.css
+++ b/css/css/divi-child/style.css
@@ -728,7 +728,7 @@ footer .foot-icons .et_pb_module.et_pb_text a {
     padding: 0;
 }
 .age-gate-wrapper .age-gate-form::before {
-    background: url(https://www.herbal.ml/img/leaf-01.svg) no-repeat;
+    background: url(https://www.herbalistcr.com/img/leaf-01.svg) no-repeat;
     position: absolute;
     content: "";
     top: -100px;
